--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-environ==0.8.1
 django-import-export==2.7.1
 django-js-asset==2.0.0
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
